edit page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Chessground – Layout with Sidebar + Red Pieces</title>
+  <title>real men chess</title>
 
   <!-- Chessground CSS -->
   <link
