--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     /* Sidebar: controls + palette */
     #sidebar {
-      width: 35%;
+      width: 25%;
       min-width: 200px;
       box-sizing: border-box;
       padding: 16px;
@@ -140,6 +140,14 @@
       justify-content: center;
     }
 
+    #main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
     /* Board container */
     #board {
       width: 400px;
@@ -168,6 +176,16 @@
     body.dark-bg button {
       color: #fff;
     }
+
+    .create-row {
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+      padding: 4px;
+      background: #888;
+    }
+    #create-black { margin-bottom: 10px; }
+    #create-white { margin-top:    10px; }
   </style>
 </head>
 <body>
@@ -195,6 +213,10 @@
           width="24" height="24"
         >
       </button>
+      <!-- <label style="display:flex; align-items:center; gap:4px;">
+        <input type="checkbox" id="coords-toggle" checked>
+          Show coordinates
+      </input> -->
     </div>
 
     <div id="palette">
@@ -207,7 +229,9 @@
 
 
   <div id="main">
+    <div id="create-black" class="create-row"></div>
     <div id="board"></div>
+    <div id="create-white" class="create-row"></div>
   </div>
 
   <script type="module">
@@ -241,6 +265,18 @@
     colors.forEach(color => {
       const row = document.getElementById(`palette-${color}`);
       roles.forEach(role => row.append(createSwatch(color, role)));
+    });
+    
+    const blackCreate = document.getElementById('create-black');
+    const whiteCreate = document.getElementById('create-white');
+
+    roles.forEach(role => {
+      blackCreate.append(createSwatch('black', role));
+    });
+
+    // only white pieces below
+    roles.forEach(role => {
+      whiteCreate.append(createSwatch('white', role));
     });
 
     // 3) Handle dragstart on palette
@@ -288,6 +324,13 @@
     darkBtn.addEventListener('click', () => {
       document.body.classList.toggle('dark-bg');
     });
+
+    // const coordsToggle = document.getElementById('coords-toggle');
+
+    // // when it flips, update the board
+    // coordsToggle.addEventListener('change', e => {
+    //   cg.set({ coordinates: e.target.checked });
+    // });
   </script>
 </body>
 </html>
