--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
     }
 
     /* Main area: centered board */
-    #main {
+    /* #main {
       flex: 1;
       display: flex;
       align-items: center;
       justify-content: center;
-    }
+    } */
 
     #main {
       flex: 1;
@@ -152,6 +152,7 @@
     #board {
       width: 400px;
       height: 400px;
+      flex-shrink: 0;
     }
   </style>
 
