--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     rel="stylesheet"
   />
 
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    rel="stylesheet"
+  />
 
   <style>
     .cg-wrap piece.noisulli {
@@ -255,6 +259,13 @@
       margin-bottom: 10px;
       margin-top: 10px;
     }
+
+    #sidebar, #main {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -271,7 +282,7 @@
         value="1"
       >
       <span id="size-value">100%</span>
-      <button id="reset-btn">Reset Position</button>
+      <button id="reset-btn" class="btn btn-outline-primary d-flex align-items-center"><i class="bi bi-arrow-counterclockwise me-1"></i>Reset Position</button>
       <button
         id="dark-btn"
         title="Toggle dark background"
@@ -293,14 +304,34 @@
           Play as Black
         </label>
       </div>
-      <label style="display:flex;align-items:center;gap:4px;">
-        <input type="checkbox" id="create-toggle" checked>
-        Enable off-board creation
-      </label>
-      <label style="display:flex;align-items:center;gap:4px;">
-        <input type="checkbox" id="coords-toggle" checked>
-        Show coordinates
-      </label>
+       <div class="form-check form-switch ms-3">
+        <input
+            class="form-check-input"
+            type="checkbox"
+            id="create-toggle"
+            checked
+          >
+          <label
+            class="form-check-label"
+            for="create-toggle"
+          >
+            Enable off-board creation
+          </label>
+      </div>
+      <div class="form-check form-switch ms-3">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="coords-toggle"
+          checked
+        >
+        <label
+          class="form-check-label"
+          for="coords-toggle"
+        >
+          Show coordinates
+        </label>
+      </div>
     </div>
 
     <div id="palette">
@@ -455,7 +486,10 @@
 
     // 6) Reset‐to‐start button
     document.getElementById('reset-btn').addEventListener('click', () => {
-      cg.set({ fen: 'start' });
+      cg.set({
+        fen: 'start',
+        lastMove: []     // clear any highlight of the previous move
+      });
       cg.redrawAll();
     });
 
